--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,9 @@ spring:
   h2:
     console:
       enabled: true
+  jpa:
+    properties:
+      javax:
+        persistence:
+          validation:
+            mode: none
